--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 30px 0;
   z-index: 1001;
   font-family: "Work", sans-serif;
+  margin-bottom: 5px;
 }
 @media screen and (max-width: 768px) {
   .gtco-nav {
@@ -299,7 +300,8 @@ h1, h2, h3, h4, h5, h6, figure {
   font-family: "Lora", serif;
 }
 #gtco-intro .dtc {
-  min-height: 700px;
+  /* min-height: 700px; */
+  overflow: hidden;
 }
 
 .dt {
@@ -899,7 +901,7 @@ h1, h2, h3, h4, h5, h6, figure {
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   z-index: 9999;
   background: url(../images/loader.gif) center no-repeat #fff;
 }
